--- a/index.html
+++ b/index.html
@@ -1,36 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/app.css">
+  <title>Калькулятор</title>
 </head>
 <body>
-    <main>
-        <h1>Васильев Павел</h1>
-        <h2>Java-разработчик</h2>
-        <section>
-            <h2>Образование</h2>
-            <ul>
-                <li>РЭУ им. Г.В. Плеханова Направление: Технологические машины и оборудование</li>
-                <li>Hexlet. Направление: Java-разработчик</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Навыки</h2>
-            <ul>
-                <li>Java core</li>
-                <li>Javalin</li>
-                <li>Ebean</li>
-                <li>БД</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Дополнительная информация</h2>
-            Лена играет на балалайке, Марина сушит волосы, Даня в комнате)
-        </section>
-    </main>
+  <div class="calculation">
+    <!-- BEGIN (write your solution here) -->
+    <div class="result">
+      <p class="text-gray small">30 &times; 21</p>
+      <p class="text-big">630</p>
+    </div>
+    <div class="buttons">
+      <table>
+        <tr>
+          <td><button>C</button></td>
+          <td><button>&plusmn;</button></td>
+          <td><button>%</button></td>
+          <td><button>&divide;</button></td>
+        </tr>
+      </table>
+    </div>
+    <div class="buttons">
+      <table>
+        <tr>
+          <td><button>1</button></td>
+          <td><button>2</button></td>
+          <td><button>3</button></td>
+          <td><button>&times;</button></td>
+        </tr>
+      </table>
+    </div>
+    <div class="buttons">
+      <table>
+        <tr>
+          <td><button>4</button></td>
+          <td><button>5</button></td>
+          <td><button>6</button></td>
+          <td><button>&minus;</button></td>
+        </tr>
+      </table>
+    </div>
+    <div class="buttons">
+      <table>
+        <tr>
+          <td><button>7</button></td>
+          <td><button>8</button></td>
+          <td><button>9</button></td>
+          <td><button>+</button></td>
+        </tr>
+      </table>
+    </div>
+    <div class="buttons">
+      <table>
+        <tr>
+          <td><button>0</button></td>
+          <td><button>.</button></td>
+          <td class="small"><button >Delete</button></td>
+          <td><button>=</button></td>
+        </tr>
+      </table>
+    </div>
+    <!-- END -->
+  </div>
 </body>
 </html>
